--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "react-native-custom-keyboard",
   "version": "1.0.3",
-  "description": "",
+  "description": "react native custom keyboard for both Android and iOS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
