--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "react-native-custom-keyboard",
-  "version": "1.0.12",
+  "name": "@unpourtous/react-native-custom-keyboard",
+  "version": "1.1.1",
   "description": "react native custom keyboard for both Android and iOS",
   "main": "index.js",
   "scripts": {
